# doc-flow

./: README.md  pyproject.toml
src/: env.sample
src/doc_flow/: __main__.py  app.py  database.py  database.sqlite3  settings.py  tables.py
src/doc_flow/api/: __init__.py  auth.py  document.py
src/doc_flow/models/: __init__.py  auth.py  document.py
src/doc_flow/services/: auth.py  document.py  utils.py
