[tool.poetry]
name = "doc-flow"
version = "0.1.0"
description = ""
authors = ["-- <yaliyarov@mail.ru>"]
readme = "README.md"
packages = [{ include = "doc_flow" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.95.1" }
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.12"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
celery = "^5.2.7"
redis = "^4.5.5"
importlib-metadata = "4.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
